static/css/style.css
/* ... */
.button-confirm { 
    background-color: rgba(7, 156, 131, .8);
}

.button-cancel {
    background-color: rgba(206, 59, 103, .8);
    
}

/* Font Styling */

h1,
h2,
h3,
h4,
h5,
h6,
.navbar-brand,
.copyright,
.nav-link {
    font-family: 'Montserrat', sans-serif;
}

p,
a {
    font-family: 'Libre Franklin', sans-serif;
    font-weight: 300;
}

/* FLASH STYLING */

.page-flash-container{
    position: fixed;
    left: 50%;
    top: 10%;
    transform: translate(-50%, -10%);
    z-index: 15;
    min-width: 20rem;
}

.flash-message {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: auto;
    max-width: 36rem;
    background-color: #7697F9;
    font-size: 2.5rem;
    padding:1.5rem 4rem;
    text-align: center;
    box-shadow: 3px 3px 3px rgba(0, 0, 0, .3);
}

.flash-close,
.flash-text {
    font-weight: 400;
    display: flex;
    padding: 0;
    margin: 0;
    color: #fff;
}

.flash-close {
    -webkit-appearance: none;
    -moz-appearance: none;
    border: none;
    background: none;
    justify-content: center;
    align-items: center;
}

/* Navbar Styling */

header {
    display: flex;
    height: 6rem;
}


nav.navbar {
    position: fixed;
    top:0;
    background-color: #89A6FB;
    height: 6rem;
    padding: 0;
    max-width: 100vw;
    width: 100%;
    box-shadow: .2rem .4rem .4rem rgba(0, 0, 0, .25);
    box-shadow: .2rem .4rem .4rem rgba(0, 0, 0, .25);
    z-index: 10;
}

div.collapse.navbar-collapse {
    justify-content: flex-end;
}

.navbar a.navbar-brand {
    position: absolute;
    font-size: 3rem;
    color: #ffffff;
    margin-left: 1rem;
    border: none;
}
.navbar a.navbar-brand:focus,
.navbar a.navbar-brand:hover {
    color: #ffffff;
}

.navbar.navbar-expand-md button.navbar-toggler {
    position: absolute;
    right: 1rem;
    margin-right: 1rem;
    border: none;
    font-size: 2.2rem;
    color: #ffffff;
}

.navbar.navbar-expand-md button.navbar-toggler:active {
    font-size: 2.4rem;
}


.navbar.navbar-expand-md button.navbar-toggler:focus {
    box-shadow: none;
}

.navbar li.nav-item a.nav-link {
    padding: .5rem 1rem;
    font-size: 2rem;
    color: #ffffff;
    margin: 0 auto;
    width: 50%;
}

.navbar-nav {
    text-align: center;
    margin-top: 6rem;
    background-color: #89A6FB;
    box-shadow: 0 2px rgba(0, 0, 0, .3);
}


.navbar .nav-item .nav-link:hover,
.navbar .nav-item .nav-link:active,
.navbar .nav-item .nav-link:focus {
    background-color: white;
    color: #7697F9;
}

li.nav-item.active  a.nav-link {
    background-color: white;
    color: #7697F9;
}

/* Footer Styling */

footer {
    display: flex;
    flex-direction: column;
    color: #89A6FB;
    font-size: 1.8rem;
    align-items: center;
}

.social-container, .copyright {
    display: flex;
}

.copyright {
    padding: 1rem;
    margin: 0;
}

.social-container i {
    font-size: 2.4rem;
    padding: 1rem;
    color: #89A6FB;
}

/* Home Page Styling */

.filter-options {
    width:100%;
    height: auto;
    display: flex;
    background-color: #ffffff;
    box-shadow: .4rem .4rem .4rem rgba(0, 0, 0, .25);
    flex-direction: column;
    margin-bottom: 4rem;
    margin-right: auto;
    margin-left: auto;
    justify-content: space-between;
}

.filter-control {
    display: flex;
    padding: 1rem;
    margin-top: auto;
    margin-bottom: auto;
    font-size: 1.6rem;
    color: #7697F9;
    font-family: 'Montserrat', sans-serif;
}

button.filter-control {
    background-color: rgba(7, 156, 131, .8);
    color: #ffffff;
    padding: 1rem;
    display: flex;
    -webkit-appearance: none;
    -moz-appearance: none;
    border: none;
    justify-content: center;
    align-items: center;
    box-shadow: .2rem .4rem .4rem rgba(0, 0, 0, .25);
}

#sort-by-dropdown,
#filter-dropdown  {
    border: 0;
    background-color: #ffffff;
    width: 18rem;
}

.filter-div {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding-left: .5rem;
    padding-right: .5rem;
}

.sidebar {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    padding: 0;
    height: 5.5rem;
    margin:0;
    box-shadow: .2rem .4rem .4rem rgba(0, 0, 0, .25);
}

.sidebar {
    width: 100%;
}

.post-card {
    background: none;
    display:flex;
    flex-direction: column;
    margin-left: auto;
    margin-right: auto;
    border: 1px;
    width: 80vw;
    min-height: 25rem;
    height: auto;
    margin-bottom: 5rem;
    padding: 0;
}

.post-author-details{
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
}

.post-author-avatar-container {
    display: flex;
    height: 4rem;
    max-width: 5rem;
    overflow: hidden;
    margin-left: auto;
}

.post-author-avatar {
    display: flex;
    height: 4rem;
    width: auto;
}

.post-details {
    padding: 1rem 1rem;
    margin:0 auto;
    min-height: 30rem;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.post-title, .post-topic {
    font-size: 2.4rem;
    word-wrap: anywhere;
}

.post-topic {
    margin: 0;
}

.post-text{
    word-wrap: anywhere;
    overflow: hidden;
    position: relative;
    background: white;
    max-height: 12.5rem;
}

.expand-post {
    display: none;
    position: relative;
    width: auto;
    text-decoration: none;
    color: #7697F9;
    font-weight: 400;
    font-size: 1.6rem;
    margin: 0;
    box-shadow: .4rem .4rem .4rem rgba(0, 0, 0, .25);
    top: -3rem;
    margin-right: -1rem;
    margin-left: -1rem;
    padding: .5rem;
    z-index: 5;
    background: rgba(255, 255, 255, .95);
    justify-content: space-between;
}

.expand-post i {
    display: flex;
    margin:auto 0;
}

.post-text, .post-author {
    font-size: 1.6rem;
}

.post-text,
.post-title {
    padding-top: .5rem;
}

.post-title-options {
    line-height: 2.4rem;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    position: relative;
}
/* ... */

